--- a/src/app/public-module/login-form/login-form.component.html
+++ b/src/app/public-module/login-form/login-form.component.html
@@ -3,9 +3,6 @@
 
   <!-- EMAIL FIELD -->
   <!-- status informations of input -->
-  <div [ngStyle]="(!ref_email.valid && !ref_email.pristine)? {'color':'#dc3545'}:{'color': 'transparent'}">
-    Email requis ou invalide
-  </div>
   <div class="input-group input-group-sm mb-3 mx-auto">
     <span class="input-group-text" id="inputGroup-sizing-sm">Email</span>
     <input type="text" class="form-control" id="email" aria-describedby="inputGroup-sizing-sm" required autofocus
@@ -13,10 +10,7 @@
   </div>
 
   <!-- PASSWORD FIELD -->
-  <div [ngStyle]="(!ref_pwd.valid && !ref_pwd.pristine)? {'color':'#dc3545'}:{'color': 'transparent'}">
-    Mot de passe requis
-  </div>
-  <div class="input-group input-group-sm  mx-auto">
+ <div class="input-group input-group-sm  mx-auto">
     <span class="input-group-text" id="inputGroup-sizing-sm">Mot de passe</span>
     <input type="password" class="form-control" id="pwd" aria-describedby="inputGroup-sizing-sm" required
       [(ngModel)]="this.password" name="pwd" #ref_pwd="ngModel" />
@@ -43,82 +37,82 @@
     <div class="modal-content">
       <div class="modal-body bg-success rounded">
 
-        <!-- Start content of modal -->
+        <!-- START CONTENT OF MODAL -->
 
         <!-- Integrated second form in modal -->
         <form (ngSubmit)="OnSubmitChangePwdRequest()" #changePwdRequestForm="ngForm">
 
           <!-- Input fiels agencement -->
           <div class="d-flex flex-column align-items-center">
+            <div [ngSwitch]="this.resetPasswordStep">
 
-            <!-- Send authentication code -->
-            <button (click)="onAskingReceiveCode()" type="button" class="mt-2 btn btn-secondary border border-white">
-              Recevoir mon code de changement de mot de passe sur l'adresse <span
-                class="text-primary">{{this.email}}</span>
-            </button>
-
-            <!-- 2 - Input activation code -->
-            <div class="d-flex flex-column border border-danger">
-              <p>Saisie du code d'activation envoyé à l'adresse
-                <strong>{{this.email}}</strong>
-              </p>
-              <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
-                <span class="input-group-text" id="inputGroup-sizing-sm">Code d'activation</span>
-                <input type="text" class="form-control" id="activation" aria-describedby="inputGroup-sizing-sm" required
-                  pattern="[0-9]{6}$" [(ngModel)]="this.activationcode" name="activation" #code_activation="ngModel"
-                  placeholder="Entrez le code (validité 15mn)" />
-              </div>
-              <button (click)="onSendActivationCode()" type="button" class="mt-2 btn btn-secondary border border-white"
-                [disabled]="!code_activation.valid">
-                Envoyer le code
-              </button>
-            </div>
-
-
-            <!-- Input new password -->
-            <div class="d-flex flex-column border border-danger">
-              <p>Entrée du nouveau mot de passe</p>
-              <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
-                <span class="input-group-text" id="inputGroup-sizing-sm">Mot de passe</span>
-                <input type="password" class="form-control" id="newPwdId" aria-describedby="inputGroup-sizing-sm"
-                  required pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.newPassword" name="newPwdField"
-                  #new_pwd_model="ngModel" placeholder="Nouveau mot de passe" />
+              <div *ngSwitchCase=0>
+                <!-- Send authentication code -->
+                <button (click)="onAskingReceiveCode()" type="button"
+                  class="mt-2 btn btn-secondary border border-white">
+                  Recevoir mon code de changement de mot de passe sur l'adresse <span
+                    class="text-primary">{{this.email}}</span>
+                </button>
               </div>
 
-              <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
-                <span class="input-group-text" id="inputGroup-sizing-sm">Confirmation</span>
-                <input type="password" class="form-control" id="confirmPwdId" aria-describedby="inputGroup-sizing-sm"
-                  required pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.confirmedPassword"
-                  name="confirmedPwdField" #confirmed_pwd_model="ngModel" placeholder="Confirmez le mot de passe"
-                  [disabled]="!new_pwd_model.valid" />
+              <div *ngSwitchCase="1">
+                <!-- 2 - Input activation code -->
+                <div class="d-flex flex-column">
+                  <p>Veuillez saisir la code envoyé à l'adresse
+                    <strong>{{this.email}}</strong>
+                  </p>
+                  <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Code d'activation</span>
+                    <input type="text" class="form-control" id="activation" aria-describedby="inputGroup-sizing-sm"
+                      required pattern="[0-9]{6}$" [(ngModel)]="this.activationcode" name="activation"
+                      #code_activation="ngModel" placeholder="Entrez le code (validité 15mn)" />
+                  </div>
+                  <button (click)="onSendActivationCode()" type="button"
+                    class="mt-2 btn btn-secondary border border-white" [disabled]="!code_activation.valid">
+                    Envoyer le code
+                  </button>
+                </div>
               </div>
-            <button   (click)="onSendActivationCode()" type="button" class="mt-2 btn btn-secondary border border-white"
-                [disabled] ="this.newPassword !== this.confirmedPassword || !this.newPassword">
-                Enregistrer
-              </button>
+
+              <div *ngSwitchCase="2">
+                <!-- 3 - Input new password -->
+                <div class="d-flex flex-column">
+                  <p>Veuillez entrer votre nouveau mot de passe</p>
+                  <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Mot de passe</span>
+                    <input type="password" class="form-control" id="newPwdId" aria-describedby="inputGroup-sizing-sm"
+                      required pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.newPassword" name="newPwdField"
+                      #new_pwd_model="ngModel" placeholder="Nouveau mot de passe" />
+                  </div>
+
+                  <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Confirmation</span>
+                    <input type="password" class="form-control" id="confirmPwdId"
+                      aria-describedby="inputGroup-sizing-sm" required pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}"
+                      [(ngModel)]="this.confirmedPassword" name="confirmedPwdField" #confirmed_pwd_model="ngModel"
+                      placeholder="Confirmez le mot de passe" [disabled]="!new_pwd_model.valid" />
+                  </div>
+                  <button (click)="onSendNewPassword()" type="button" class="mt-2 btn btn-secondary border border-white"
+                    [disabled]="this.newPassword !== this.confirmedPassword || !this.newPassword">
+                    Enregistrer
+                  </button>
+                </div>
+              </div>
+
+              <div *ngSwitchCase=3>
+                <!-- 4 - Comment on operation result -->
+                <div class="d-flex justify-content-center">
+                  <p>Modification du nouveau mot de passe effectuée.</p>
+                </div>
+              </div>
+
+
+              <div *ngSwitchDefault>{{this.resetPasswordStep}}</div>
             </div>
-
-
-
-
-
-
-
-            <div class="d-flex flex-grow-0 justify-content-center">
-              <button type="button" class="mt-2 btn btn-secondary ms-lg-auto border border-white">
-                Continuer
-              </button>
-            </div>
-
           </div>
-
         </form>
 
-
-
-
-        <!-- End content of modal -->
-
+        <!-- END CONTENT OF MODAL -->
       </div>
     </div>
   </div>
